add initial mocks, update endpoints, add GET, update Makefile
